<resources>
    <string name="app_name">Travel App</string>
    <string name="Search">Search</string>
    <string name="see_all">See All</string>
    <string name="recommended">Recommended</string>
    <string name="popular_destination">Popular Destination</string>
    <string name="address_city">Address, City...</string>
    <string name="location">Location</string>
    <string name="title">title</string>
    <string name="_0">$0</string>
    <string name="person">/person</string>
    <string name="address">Address</string>
    <string name="_5">5</string>
    <string name="image_content_description" />
    <string name="star_icon_description" />
    <string name="todo">TODO</string>
    <string name="upcoming_trip">Upcoming trip</string>
    <string name="show_this_ticket_to_the_your_guide_before_departure">Show this ticket to the your guide before departure</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="time">Time</string>
    <string name="tip_duration">Tip Duration</string>
    <string name="Title">Title</string>
    <string name="download_ticket">Download Ticket</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_content">Manage Content</string>
    <string name="manage_bookings">Manage Bookings</string>
    <string name="analytics">Analytics</string>
    <string name="manage_users_description">Icon for managing users</string>
    <string name="manage_content_description">Icon for managing content</string>
    <string name="manage_bookings_description">Icon for managing bookings</string>
    <string name="analytics_description">Icon for analytics</string>

</resources>